add all exercies for 10 of homework number 13

--- a/sesion13-10ejercicios.html
+++ b/sesion13-10ejercicios.html
@@ -61,6 +61,31 @@
                         <p>quinto</p>
                     </a>
                 </li>
+                <li>
+                    <a href="sexto-10.html">
+                        <p>sexto</p>
+                    </a>
+                </li>
+                <li>
+                    <a href="septimo-10.html">
+                        <p>septimo</p>
+                    </a>
+                </li>
+                <li>
+                    <a href="octavo-10.html">
+                        <p>octavo</p>
+                    </a>
+                </li>
+                <li>
+                    <a href="noveno-10.html">
+                        <p>noveno</p>
+                    </a>
+                </li>
+                <li>
+                    <a href="decimo-10.html">
+                        <p>decimo</p>
+                    </a>
+                </li>
             </ul>
         </nav>
     </main>
