--- a/sesion14.html
+++ b/sesion14.html
@@ -17,27 +17,36 @@
         <nav>
             <ul>
                 <li>
-                    <a href="sesion13-10ejercicios.html">
-                        <p>
-                            sesión 13, 10 ejercicios
-                        </p>
-                    </a>
-                </li>
-                <li>
-                    <a href="sesion13.html">
-                        <p>sesión 13 tarea</p>
-                    </a>
-                </li>
-                <li>
-                    <a href="sesion14.html">
-                        <p>sesión 14 tarea</p>
+                    <a href="index.html">
+                        <p>volver</p>
                     </a>
                 </li>
             </ul>
         </nav>
     </header>
-    <main></main>
+    
+    <main class="container">
+        <h1>esta es la tarea de la sesión 14 y son tres</h1>
+        <ul>
+            <li>
+                <a href="primero-sesion14.html">
+                    <p>primer ejercicio</p>
+                </a>
+            </li>
+            <li>
+                <a href="segundo-sesion14.html">
+                    <p>segundo ejercicio</p>
+                </a>
+            </li>
+            <li>
+                <a href=""></a>
+            </li>
+        </ul>
+    </main>
     <aside></aside>
     <footer></footer>
 </body>
+<script>
+    
+</script>
 </html>
