--- a/sesion14.html
+++ b/sesion14.html
@@ -39,7 +39,9 @@
                 </a>
             </li>
             <li>
-                <a href=""></a>
+                <a href="tercero-sesion14.html">
+                    <p>tercer ejercicio</p>
+                </a>
             </li>
         </ul>
     </main>
