--- a/index.html
+++ b/index.html
@@ -38,6 +38,11 @@
                         <p>sesión 15 </p>
                     </a>
                 </li>
+                <li>
+                    <a href="sesion16.html">
+                        <p>sesion 16, tarea</p>
+                    </a>
+                </li>
             </ul>
         </nav>
     </header>
