--- a/sesion14.html
+++ b/sesion14.html
@@ -27,28 +27,57 @@
     
     <main class="container">
         <h1>esta es la tarea de la sesión 14 y son tres</h1>
-        <ul>
-            <li>
-                <a href="primero-sesion14.html">
-                    <p>primer ejercicio</p>
-                </a>
-            </li>
-            <li>
-                <a href="segundo-sesion14.html">
-                    <p>segundo ejercicio</p>
-                </a>
-            </li>
-            <li>
-                <a href="tercero-sesion14.html">
-                    <p>tercer ejercicio</p>
-                </a>
-            </li>
-        </ul>
+        <h2>Un maestro desea saber qué porcentaje de hombres y qué porcentaje de mujeres hay </h2>
+        <p>cuantos hombres y mujeres hay</p>
+        <form action="">
+            <label for="_1_hombres">cual es el numero de hombres que hay en el grupo</label>
+            <input type="number" name="_1_hombres" id="_1_hombres">
+
+            <label for="_1_mujeres">cual es el numero de mujeres que hay en el grupo</label>
+            <input type="number" name="_1_mujeres" id="_1_mujeres">
+
+            <input type="button" value="calcular" id="_1_boton">
+
+            <p id="_1_1"></p>
+            <p id="_1_2"></p>
+        </form>
+        <h2>La municipalidad de Pueblo Libre piensa invertir cierto monto de dinero</h2>
+        <p>que avenidas recibiran dinero y cuanto?</p>
+        <form action="">
+            <label for="_2_monto">cual es el presupuesto</label>
+            <input type="number" name="_2_monto" id="_2_monto">
+
+            <input type="button" value="calcular" id="_2_boton">
+
+            <p id="_2_1"></p>
+            <p id="_2_2"></p>
+            <p id="_2_3"></p>
+            <p id="_2_4"></p>
+            <p id="_2_5"></p>
+        </form>
+        <h2>Una empresa realiza anualmente un evento para fines solidarios</h2>
+        <p>las entradas</p>
+        <form action="">
+            <label for="_3_general">cual es el numero de las ENTRADAS GENERALES</label>
+            <input type="number" name="_3_general" id="_3_general">
+
+            <label for="_3_mayores">cual es el numero de las entradas para mayores de 65</label>
+            <input type="number" name="_3_mayores" id="_3_mayores">
+
+            <label for="_3_memores">cual es el numero de las entradas para menores de edad</label>
+            <input type="number" name="_3_memores" id="_3_memores">
+
+            <input type="button" value="calcular" id="_3_boton">
+
+            <p id="_3_1"></p>
+            <p id="_3_2"></p>
+            <p id="_3_3"></p>
+            <p id="_3_4"></p>
+            <p id="_3_5"></p>
+        </form>
     </main>
     <aside></aside>
     <footer></footer>
 </body>
-<script>
-    
-</script>
+<script src="js/sesion14.js"></script>
 </html>
